force-app/main/default/objects/bre__Event_Pricing_Package__c/bre__Event_Pricing_Package__c.object-meta.xml
<CustomObject>
    <label>AC Event Pricing Package</label>
    <nameField>
        <label>Event Pricing Packages Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC Event Pricing Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>