force-app/main/default/objects/bre__Event_Pricing_Package__c/fields/bre__AC_Event__c.field-meta.xml
<CustomField>
    <fullName>bre__AC_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AC Event</label>
    <referenceTo>bre__BR_Event__c</referenceTo>
    <relationshipLabel>Event Pricing Packages</relationshipLabel>
    <relationshipName>Event_Pricing_Packages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>