force-app/main/default/objects/bre__Event_Pricing_Package__c/fields/bre__Description__c.field-meta.xml
<CustomField>
    <fullName>bre__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>