force-app/main/default/objects/bre__Event_Pricing_Package__c/fields/bre__Normal_Price__c.field-meta.xml
<CustomField>
    <fullName>bre__Normal_Price__c</fullName>
    <label>Normal Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>