force-app/main/default/objects/bre__Event_Pricing_Package__c/validationRules/bre__Early_Bird_Deadline_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>bre__Early_Bird_Deadline_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK(bre__Early_Bird_Price__c)) ,
ISBLANK( bre__Early_Bird_End_Datetime__c ) )</errorConditionFormula>
    <errorDisplayField>bre__Early_Bird_End_Datetime__c</errorDisplayField>
    <errorMessage>You must specify early bird price deadline.</errorMessage>
</ValidationRule>