force-app/main/default/objects/bre__Event_Pricing_Package__c/validationRules/bre__Early_Bird_Price_Deadline_Max_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>bre__Early_Bird_Price_Deadline_Max_Value</fullName>
    <active>true</active>
    <errorConditionFormula>bre__Early_Bird_End_Datetime__c  &gt;  bre__AC_Event__r.bre__Start_Date__c</errorConditionFormula>
    <errorDisplayField>bre__Early_Bird_End_Datetime__c</errorDisplayField>
    <errorMessage>Early bird price deadline cannot be later than event start time.</errorMessage>
</ValidationRule>