force-app/main/default/objects/bre__Event_Pricing_Package__c/listViews/bre__All.listView-meta.xml
<ListView>
    <fullName>bre__All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>